# Bytebuddies_Professional_Portfolio

./: .gitignore  README.md  TASKS.md
.githooks/: pre-push
.github/workflows/: backend-ci.yml  deploy-backend-render.yml  deploy-frontend.yml  frontend-ci.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: database.py  models.py  router.py
backend/app/api/v1/endpoints/: application.py  auth.py  documents.py  health.py  questions.py  responses.py  scoring.py
backend/app/api/v1/services/: auth_service.py
backend/app/core/: config.py  database.py  exceptions.py  models.py
backend/app/core/scoring/: ahp.py  calculator.py  metrics.py  normalization.py  verification.py
backend/app/schemas/: __init__.py  question_schema.py  responses.py  scoring.py
backend/app/seeds/: seed_questions.py
backend/tests/: test_smoke.py
docs/: API_SPEC.md  SCORING.md
frontend/: .gitignore  .prettierignore  deno.json  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: AdminWeightsPage.tsx  ApplicantApplyPage.tsx  ApplicantScorePage.tsx  ApplicantStatusPage.tsx  DashboardPage.tsx  EsgSubmissionPage.tsx  LoanDetailPage.tsx  LoansPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReportsPage.tsx  ScoreResultPage.tsx  ScoringPage.tsx  VerificationPanelPage.tsx
frontend/src/services/: api.d.ts  api.js
frontend/tests/: smoke.test.ts
scripts/: local-ci-backend.sh  local-ci-frontend.ps1  local-ci-frontend.sh  setup-local-hooks.ps1  setup-local-hooks.sh
(+106 files in other folders)
